feat: 下拉跳转新页面新增

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
   <string name="app_name">ToolBox</string>
   <string name="tab_home">首页</string>
   <string name="tab_mine">我</string>
+
+  <string name="hint_add_task">添加任务</string>
+  <string name="hint_empty">你还未添加任何任务</string>
 </resources>
